--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <h1>David Weibel</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <a href="../cst1021-html>HTML<a/>
 </body>
 
 </html>
