--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Test 1 for PHP
+            David Weibel
         </title>
         <style>
             #familymember {
@@ -37,11 +37,9 @@
         <link href="lab.css" rel="stylesheet">
     </head>
     <body>
-        <h1>David Weibel - HTML && CSS</h1>
-        
-        <img src="myBackHurts.jpg" alt="myBackHurts" style="float: right;">
+        <h1>David Weibel - HTML && CSS Cheat Sheet</h1>
          
-        <h2>Lab Excersises</h2> 
+        <h2>Examples</h2> 
 
 
         <table id="familymember">
@@ -62,9 +60,9 @@
             <tr> 
                 <td style="text-align:center ;">Week 2 </td>
                 <td></td>
-                <td><a href="CST1021-HTML/Lab02/DavidWeibel_Lab02.html" style="text-align:center ;">lab2</a></td>
+                <td><a href="CST1021-HTML/Lab02/DavidWeibel_Lab02.html" style="text-align:center ;">Text Formatting</a></td>
                 <td></td>
-                <td style="text-align:center ;"><a href = "lab02/lab2Info.png">  calc circumference and radius of a circle.</a></td>
+                <td style="text-align:center ;">Different HTML text formats.</td>
             </tr>
             <tr>
                 <td style="text-align:center ;">Week 3</td>
