--- a/index.html
+++ b/index.html
@@ -38,23 +38,17 @@
     </head>
     <body>
         <h1>David Weibel - HTML && CSS Cheat Sheet</h1>
-         
-        <h2>Examples</h2> 
 
 
         <table id="familymember">
             
             <tr>
                 <th>
-                    WEEK
+                    Skills
                 </th>
                 <th></th>
                 <th>
-                    LAB
-                </th>
-                <th></th>
-                <th>
-                    INFO
+                    INFORMATION
                 </th>
             </tr>
             <tr> 
