--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 text-align: center;
             }
         </style>
-        <link href="lab.css" rel="stylesheet">
+        <link href="index.css" rel="stylesheet">
     </head>
     <body>
         <h1>David Weibel - HTML && CSS Cheat Sheet</h1>
