--- a/CST1021-HTML/Lab12/Lab12.html
+++ b/CST1021-HTML/Lab12/Lab12.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Lab 12 - David Weibel</h1>
-    <form action="https://cst.ridgewater.edu/Tools/FormEcho/?get=URL%20query&ooga=booga" method="post">
+    <form action="ADD LOCATION FOR FORM DATA HERE" method="post">
         <input type="hidden" name="student" value="David Weibel">
         <label class="right" for="ptime">Favorite Passtime:</label>
         <input type="text" id="ptime" name="favorite"><br>
