--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
         </title>
         <link href="index.css" rel="stylesheet">
     </head>
+    <style>
+        #familymember {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 40%;
+}
+
+#familymember td, #familymember th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#familymember tr:nth-child(odd){background-color: lightsalmon;}
+
+#familymember tr:nth-child(even){background-color: lightblue;}
+
+#familymember tr:hover {background-color: #ddd;}
+
+#familymember th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: black;
+    color: white;
+}
+#familymember tr {
+    text-align: center;
+}
+    </style>
     <body>
         <h1>David Weibel - HTML && CSS Cheat Sheet</h1>
 
