--- a/CST1021-HTML/Lab02/DavidWeibel_Lab02.html
+++ b/CST1021-HTML/Lab02/DavidWeibel_Lab02.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <h1>Lab 2 - David Weibel</h1>
+    <h1>David Weibel - Text Formats</h1>
 
     <section>
         <h2>HTML Text Formatting</h2>
