--- a/CST1021-HTML/Lab03/DavidWeibel_Lab03_A.html
+++ b/CST1021-HTML/Lab03/DavidWeibel_Lab03_A.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Lab 3 - David Weibel - Page A</title>
+    <title>David Weibel - Page A</title>
     <meta charset="UTF-8">
     <link href="Lab03.css" rel="stylesheet">
 </head>
