--- a/CST1021-HTML/Lab04/DavidWeibel_Lab04.html
+++ b/CST1021-HTML/Lab04/DavidWeibel_Lab04.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Lab 4 - David Weibel </title>
+    <title>David Weibel </title>
     <meta charset="UTF-8">
     <link href="Lab04.css" rel="stylesheet">
     <style>
