--- a/CST1021-HTML/Lab05/DavidWeibel_Lab05_B.html
+++ b/CST1021-HTML/Lab05/DavidWeibel_Lab05_B.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Lab 5 - David Weibel - Page B</title>
+    <title>David Weibel - Page B</title>
     <meta charset="UTF-8">
     <link href="Lab05.css" rel="stylesheet">
     <style>
