Update Lab 6 Text with Style - David Weibel.html

--- a/CST1021-HTML/Lab06/Lab 6 Text with Style - David Weibel.html
+++ b/CST1021-HTML/Lab06/Lab 6 Text with Style - David Weibel.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Lab 6 Text with Style - David Weibel</title>
+    <title>Text with Style - David Weibel</title>
     <meta charset="UTF-8">
     <link href="Lab06.css" rel="stylesheet">
 
