--- a/CST1021-HTML/Lab07/Lab07.html
+++ b/CST1021-HTML/Lab07/Lab07.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <h1>Lab 7 - David Weibel</h1>
+    <h1>David Weibel</h1>
     <header>
         <h2>Spray Foam Insulation vs. Fiberglass Batt Insulation</h2>
         Spray foam insulation is one of most advanced insulating materials available to the construction industry. The
