--- a/CST1021-HTML/Lab09/Lab09.html
+++ b/CST1021-HTML/Lab09/Lab09.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Lab 9 - David Weibel</title>
+    <title>David Weibel</title>
     <meta charset="UTF-8">
     <link href="Lab09.css" rel="stylesheet">
 </head>
