--- a/CST1021-HTML/Lab10/Lab10.html
+++ b/CST1021-HTML/Lab10/Lab10.html
@@ -4,7 +4,7 @@
 
 
 <head>
-    <title>Lab 10 - David Weibel</title>
+    <title>David Weibel</title>
     <meta charset="UTF-8">
     <link href="Lab10.css" rel="stylesheet">
 </head>
