--- a/CST1021-HTML/Lab11/Lab11.html
+++ b/CST1021-HTML/Lab11/Lab11.html
@@ -4,7 +4,7 @@
 
 
 <head>
-    <title>Lab 11 - David Weibel</title>
+    <title>David Weibel</title>
     <meta charset="UTF-8">
     <link href="Lab11.css" rel="stylesheet">
 </head>
