--- a/CST1021-HTML/Lab12/Lab12.html
+++ b/CST1021-HTML/Lab12/Lab12.html
@@ -4,7 +4,7 @@
 
 
 <head>
-    <title>Lab 12 - David Weibel</title>
+    <title>David Weibel</title>
     <meta charset="UTF-8">
     <link href="Lab12.css" rel="stylesheet">
 </head>
