--- a/CST1021-HTML/Lab03/DavidWeibel_Lab03_A.html
+++ b/CST1021-HTML/Lab03/DavidWeibel_Lab03_A.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h1>Lab 3 - David Weibel - Page A</h1>
+    <h1>David Weibel - Page A</h1>
     <a href="DavidWeibel_Lab03_B.html" class="page" accesskey="n" tabindex="4">Next<img src="handright.png" alt="Hand pointing right" width="93"
             height="48"></a><br>
      <a href="DavidWeibel_Lab03_B.html#bottom" accesskey="b" tabindex="3">Bottom of Page 2 </a><br>  
