--- a/CST1021-HTML/Lab04/DavidWeibel_Lab04.html
+++ b/CST1021-HTML/Lab04/DavidWeibel_Lab04.html
@@ -17,7 +17,7 @@
 
 
 <body>
-    <h1>Lab 4 - David Weibel</h1>
+    <h1>David Weibel</h1>
     <img src="supercrossSchedule.jpg" alt="Supercross Schedule" width="600" height="383" class="center">
 
     <hr style=" margin-left: 25%; margin-right: 25%;">
