--- a/CST1021-HTML/Lab05/DavidWeibel_Lab05_A.html
+++ b/CST1021-HTML/Lab05/DavidWeibel_Lab05_A.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <h1>Lab 5 - David Weibel - Page A</h1>
+    <h1>David Weibel - Page A</h1>
     <p> a folder for this lab named Lab05 and keep all documents used for Lab 5 in that folder.
         This lab will require you to make two web pages.
     </p>
