Update Lab 6 Text with Style - David Weibel.html

--- a/CST1021-HTML/Lab06/Lab 6 Text with Style - David Weibel.html
+++ b/CST1021-HTML/Lab06/Lab 6 Text with Style - David Weibel.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h1>Lab 6 Text with Style - David Weibel</h1>
+    <h1>Text with Style - David Weibel</h1>
     <p class="p1">In this paragraph I used styling from CSS to set the letter spacing to 7px. </p>
     <p class="p2">In this paragraph I used styling from CSS to demonstrate the use of text indent by 23px.</p>
     <p class="p3">In this paragraph I used styling from CSS to demonstrate the use of text shadow.</p>
