--- a/CST1021-HTML/Lab09/Lab09.html
+++ b/CST1021-HTML/Lab09/Lab09.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h1>Lab 9 - David Weibel</h1>
+    <h1>David Weibel</h1>
     <header>
         <h1 class="h1">Arachnophobia </h1>
 
