--- a/CST1021-HTML/Lab10/Lab10.html
+++ b/CST1021-HTML/Lab10/Lab10.html
@@ -11,7 +11,7 @@
 
 
 <body>
-    <h1>Lab 10 Lists- David Weibel</h1>
+    <h1>Lists- David Weibel</h1>
     <ol class="a">
         <li>First Level
             <ol class="b">
