--- a/CST1021-HTML/Lab11/Lab11.html
+++ b/CST1021-HTML/Lab11/Lab11.html
@@ -11,7 +11,7 @@
 
 
 <body>
-    <h1>Lab 11 - David Weibel</h1>
+    <h1>David Weibel</h1>
     <table>
         <tr>
             <td>January</td>
