--- a/CST1021-HTML/Lab12/Lab12.html
+++ b/CST1021-HTML/Lab12/Lab12.html
@@ -11,7 +11,7 @@
 
 
 <body>
-    <h1>Lab 12 - David Weibel</h1>
+    <h1>David Weibel</h1>
     <form action="ADD LOCATION FOR FORM DATA HERE" method="post">
         <input type="hidden" name="student" value="David Weibel">
         <label class="right" for="ptime">Favorite Passtime:</label>
