--- a/CST1021-HTML/Lab03/DavidWeibel_Lab03_B.html
+++ b/CST1021-HTML/Lab03/DavidWeibel_Lab03_B.html
@@ -3,15 +3,15 @@
 
 
 <head>
-    <title>Lab 3 - David Weibel</title>
+    <title>David Weibel</title>
     <meta charset="UTF-8">
     <link href="Lab03.css" rel="stylesheet">
 </head>
 
 <body>
     <a id="top"></a>
-    <h1>Lab 3 - David Weibel - Page B</h1>
-    <a href="DavidWeibel_Lab03_A.html" class="page" accesskey="p" tabindex="1">Previous<img src="handleft.png"
+    <h1>David Weibel - Page B</h1>
+    <a href="DavidWeibel_Lab03_A.html" class="page" accesskey="p" tabindex="1">Previous<img src="handLeft.png"
             alt="Hand pointing left" width="93" height="48"> </a><br>
     <a href="#bottom" accesskey="b" tabindex="2">Bottom of Page</a>
     <img src="search.png" alt="Search sites" width="450" height="200" usemap="#Search_sites">
