--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </tr> 
             <tr>
                 
-                <td><a href = "CST1021-HTML/Lab06Lab 6 Text with Style-David Weibel.html" style="text-align:center" target="blank">Text Styles</a></td>
+                <td><a href = "CST1021-HTML/Lab06/Lab 6 Text with Style - David Weibel.html" style="text-align:center" target="blank">Text Styles</a></td>
                 <td></td>
                 <td style="text-align:center ;">Using different text styles</td>
             </tr> 
