--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                 <td></td>
                 <td style="text-align:center ;">Website style guide </td>
             </tr>
+            <tr>
+                
+                <td><a href = "flexbox.html" style="text-align:center ;">Flexbox</a></td>
+                <td></td>
+                <td style="text-align:center ;">Using flexbox to style containers. </td>
+            </tr>
 
 
 
