--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
                 <td></td>
                 <td style="text-align:center ;">Using flexbox to style containers. </td>
             </tr>
+            <tr>
+                
+                <td><a href = "flexboxToDoApp.html" style="text-align:center ;">FlexboxToDoApp</a></td>
+                <td></td>
+                <td style="text-align:center ;">App that contains days of the week and reminders.</td>
+            </tr>
 
 
 
