--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <h1>David Weibel - HTML && CSS Cheat Sheet</h1>
 
     <table id="familymember">
-
         <tr>
             <th>
                 SKILLS
@@ -24,14 +23,12 @@
             </th>
         </tr>
         <tr>
-
             <td><a href="CST1021-HTML/Lab02/DavidWeibel_Lab02.html" style="text-align:center" target="blank">Text
                     Formatting</a></td>
             <td></td>
             <td style="text-align:center ;">Different HTML text formats.</td>
         </tr>
         <tr>
-
             <td><a href="CST1021-HTML/Lab03/DavidWeibel_Lab03_A.html" style="text-align:center" target="blank">Link</a>
             </td>
             <td></td>
@@ -45,21 +42,18 @@
             <td style="text-align:center ;">Floating images to clear text</td>
         </tr>
         <tr>
-
             <td><a href="CST1021-HTML/Lab05/DavidWeibel_Lab05_A.html" style="text-align:center" target="blank">Color</a>
             </td>
             <td></td>
             <td style="text-align:center ;">changing text and background color using CSS.</td>
         </tr>
         <tr>
-
             <td><a href="CST1021-HTML/Lab06/Lab 6 Text with Style - David Weibel.html" style="text-align:center"
                     target="blank">Text Styles</a></td>
             <td></td>
             <td style="text-align:center ;">Using different text styles</td>
         </tr>
         <tr>
-
             <td><a href="CST1021-HTML/Lab07/Lab07.html" style="text-align:center" target="blank"">background style</a></td>
                 <td></td>
                 <td style=" text-align:center ;">Styling different sections of a webpage.</td>
@@ -71,19 +65,16 @@
                 <td style=" text-align:center ;">Using ID's, Classes to style webpage. </td>
         </tr>
         <tr>
-
             <td><a href="CST1021-HTML/Lab09/Lab09.html" style="text-align:center" target="blank"">Fonts</a></td>
                 <td></td>
                 <td style=" text-align:center ;">Using web based fonts.</td>
         </tr>
         <tr>
-
             <td><a href="CST1021-HTML/Lab10/Lab10.html" style="text-align:center" target="blank"">List</a></td>
                 <td></td>
                 <td style=" text-align:center ;">Using list style-type. </td>
         </tr>
         <tr>
-
             <td><a href="CST1021-HTML/Lab11/Lab11.html" style="text-align:center" target="blank"">Tables</a></td>
                 <td></td>
                 <td style=" text-align:center ;">Using colspan and rowspan. </td>
@@ -95,34 +86,34 @@
                 <td style=" text-align:center ;">creating a form. </td>
         </tr>
         <tr>
-
             <td><a href="CST1021-HTML/Lab14/index.html" style="text-align:center" target="blank"">web page</a></td>
                 <td></td>
                 <td style=" text-align:center ;">Fire truck webpage. </td>
         </tr>
         <tr>
-
             <td><a href="WebsiteStyleGuide/index.html" style="text-align:center ;">Style Guide</a></td>
             <td></td>
             <td style="text-align:center ;">Website style guide </td>
         </tr>
         <tr>
-
             <td><a href="flexbox.html" style="text-align:center ;">Flexbox</a></td>
             <td></td>
             <td style="text-align:center ;">Using flexbox to style containers. </td>
         </tr>
         <tr>
-
             <td><a href="flexboxToDoApp.html" style="text-align:center ;">FlexboxToDoApp</a></td>
             <td></td>
             <td style="text-align:center ;">App that contains days of the week and reminders.</td>
         </tr>
         <tr>
-
             <td><a href="TeaCozy/teaCozy.html" style="text-align:center ;">Tea Cozy page</a></td>
             <td></td>
             <td style="text-align:center ;">webpage arranging images.</td>
+        </tr>
+        <tr>
+            <td><a href="grids.html" style="text-align:center ;">Grids</a></td>
+            <td></td>
+            <td style="text-align:center ;">Creating and designing grids.</td>
         </tr>
 
     </table>
