--- a/grids.html
+++ b/grids.html
@@ -7,6 +7,7 @@
     <title>Lab 1 - David Weibel</title>
     <meta charset="UTF-8">
     <link href="grids.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
 </head>
 
 
