--- a/flexboxToDoApp.html
+++ b/flexboxToDoApp.html
@@ -4,6 +4,7 @@
 <head>
   <title>To Do App</title>
   <link rel='stylesheet' href='flexboxToDoApp.css'>
+  <link href="index.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet'>
 </head>
