--- a/grids.html
+++ b/grids.html
@@ -4,7 +4,7 @@
 
 
 <head>
-    <title>Lab 1 - David Weibel</title>
+    <title>Grids</title>
     <meta charset="UTF-8">
     <link href="grids.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
