--- a/grids.html
+++ b/grids.html
@@ -12,7 +12,7 @@
 
 
 <body>
-    <h1>Flexbox</h1>
+    <h1>Grids</h1>
     <p>The grid can be used to layout entire web pages. Whereas Flexbox is mostly useful for positioning items in a one-dimensional layout, CSS grid is most useful for two-dimensional layouts, providing many tools for aligning and moving elements across both rows and columns.</p>
 
     <div class="grid">
