--- a/grids.html
+++ b/grids.html
@@ -52,7 +52,13 @@
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid-auto-flow">grid-auto-flow</a></li>
         
     </ol>
-
+    <div class="container">
+        <header>Welcome!</header>
+        <nav>Links!</nav>
+        <section class="info">Info!</section>
+        <section class="services">Services!</section>
+        <footer>Contact us!</footer>
+      </div>
     
 
     <footer>
