--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
             <td></td>
             <td style="text-align:center ;">Creating and designing grids.</td>
         </tr>
+        <tr>
+            <td><a href="taskBoard.html" style="text-align:center ;">Task Board</a></td>
+            <td></td>
+            <td style="text-align:center ;">Creating a task board using grids.</td>
+        </tr>
 
     </table>
 
